--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body{
     margin-top: 0%;
 }
 .container{
+    margin-left: 0%;
+    margin-right: 0%;
     height: 80px;
     background-color: rgb(42, 125, 209);
     background-image:url(/img/pattern.png);
